Added socials to menu

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: mbrenton # name of the site
+title: Matthew Brenton # name of the site
 author: Matthew Brenton # name of site's author
 email: mbrenton98@gmail.com # email of site's author
 url: http://mbrenton.github.io/ # root address of the site
