--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,8 +4,6 @@
 entries:
   - title: Socials
     entries:
-      - title: About
-        url: about.html
       - title: Github
         url: https://github.com/mbrenton
       - title: LinkedIn
@@ -15,40 +13,30 @@ entries:
       - title: THM
         url: https://tryhackme.com/p/MASH
 
+  - title: Security
+    post_list:
+      category: security
+      show_more: true
+      show_more_text: See more posts...
+      show_more_url: security-archive.html
 
-
-
-  # - title: info
-  #   entries:
-  #     - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-  #     - title: github repo
-  #       url: https://github.com/riggraz/no-style-please
-  #     - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
-
-  # - title: all posts
-  #   post_list:
-  #     limit: 5
-  #     show_more: true
-  #     show_more_text: See archive...
-  #     show_more_url: archive.html
-
-  # - title: posts by category
-  #   post_list:
-  #     category: example2
-  #     show_more: true
-  #     show_more_text: See more posts...
-  #     show_more_url: example2-archive.html
-
-  # - title: rss
-  #   url: feed.xml
+  - title: Privacy
+    post_list:
+      category: privacy
+      show_more: true
+      show_more_text: See more posts...
+      show_more_url: privacy-archive.html
   
-  # - title: another list
-  #   entries:
-  #     - title: with subitems
-  #       entries:
-  #         - title: with subsubitems
-  #         - title: example page
-  #           url: about
-  # - title: PRO TIP
-  #   entries:
-  #     - title: to edit this menu, edit _data/menu.yml file
+  - title: Software Dev
+    post_list:
+      category: software
+      show_more: true
+      show_more_text: See more posts...
+      show_more_url: software-archive.html
+
+  - title: Misc
+    post_list:
+      category: misc
+      show_more: true
+      show_more_text: See more posts...
+      show_more_url: misc-archive.html
